Slightly hacky bit of css to remove unnecessary white space introduced by bootstrap clear fix

--- a/wp-content/themes/law-comm/assets/less/layouts/_header.less
+++ b/wp-content/themes/law-comm/assets/less/layouts/_header.less
@@ -26,6 +26,10 @@
 
 /* - - - - - - Navigation - - - - - - */
 
+.nav:before, .nav:after {
+  display: none;
+}
+
 .navbar {
 	margin-bottom: .5em;
 }
